// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Markdown with a root element renders correctly 1`] = `
<Markdown
  htmlAst={
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Test paragraph.",
            },
          ],
          "properties": Object {},
          "tagName": "p",
          "type": "element",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Test heading",
                },
              ],
              "properties": Object {},
              "tagName": "h2",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Test blockquote",
                    },
                  ],
                  "tagName": "p",
                  "type": "element",
                },
              ],
              "properties": Object {},
              "tagName": "blockquote",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Test subheading",
                    },
                  ],
                  "properties": Object {},
                  "tagName": "h3",
                  "type": "element",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Test link",
                    },
                  ],
                  "properties": Object {
                    "href": "https://www.example.com",
                  },
                  "tagName": "a",
                  "type": "element",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Test paragraph 2.",
                    },
                  ],
                  "properties": Object {},
                  "tagName": "p",
                  "type": "element",
                },
              ],
              "tagName": "section",
              "type": "element",
            },
          ],
          "tagName": "section",
          "type": "element",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Test heading 2",
                },
              ],
              "properties": Object {},
              "tagName": "h2",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Test paragraph 3.",
                },
              ],
              "properties": Object {},
              "tagName": "p",
              "type": "element",
            },
          ],
          "tagName": "section",
          "type": "element",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Test footnotes.",
            },
          ],
          "properties": Object {
            "class": "footnotes",
          },
          "tagName": "div",
          "type": "element",
        },
      ],
      "data": Object {
        "quirksMode": false,
      },
      "type": "root",
    }
  }
  root="article"
>
  <article>
    <p
      key="h-2"
    >
      Test paragraph.
    </p>
    <section
      key="h-3"
    >
      <Component
        key="h-4"
      >
        <Heading
          level="h2"
        >
          <Styled(h2)>
            <h2
              className="css-1qf3p84"
            >
              Test heading
            </h2>
          </Styled(h2)>
        </Heading>
      </Component>
      <Blockquote
        key="h-5"
      >
        <Styled(blockquote)>
          <blockquote
            className="css-2570gk"
          >
            <p
              key="h-6"
            >
              Test blockquote
            </p>
          </blockquote>
        </Styled(blockquote)>
      </Blockquote>
      <section
        key="h-7"
      >
        <Component
          key="h-8"
        >
          <Heading
            level="h3"
          >
            <Styled(h3)>
              <h3
                className="css-1qf3p84"
              >
                Test subheading
              </h3>
            </Styled(h3)>
          </Heading>
        </Component>
        <Link
          href="https://www.example.com"
          key="h-9"
        >
          <Styled(a)
            href="https://www.example.com"
            onClick={[Function]}
            rel="noopener"
            target="_blank"
          >
            <a
              className="css-nk3r0j"
              href="https://www.example.com"
              onClick={[Function]}
              rel="noopener"
              target="_blank"
            >
              Test link
            </a>
          </Styled(a)>
        </Link>
        <p
          key="h-10"
        >
          Test paragraph 2.
        </p>
      </section>
    </section>
    <section
      key="h-11"
    >
      <Component
        key="h-12"
      >
        <Heading
          level="h2"
        >
          <Styled(h2)>
            <h2
              className="css-1qf3p84"
            >
              Test heading 2
            </h2>
          </Styled(h2)>
        </Heading>
      </Component>
      <p
        key="h-13"
      >
        Test paragraph 3.
      </p>
    </section>
    <div
      className="footnotes"
      key="h-14"
    >
      Test footnotes.
    </div>
  </article>
</Markdown>
`;

exports[`Markdown without a root element renders correctly 1`] = `
<Markdown
  htmlAst={
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Test paragraph.",
            },
          ],
          "properties": Object {},
          "tagName": "p",
          "type": "element",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Test heading",
                },
              ],
              "properties": Object {},
              "tagName": "h2",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Test blockquote",
                    },
                  ],
                  "tagName": "p",
                  "type": "element",
                },
              ],
              "properties": Object {},
              "tagName": "blockquote",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Test subheading",
                    },
                  ],
                  "properties": Object {},
                  "tagName": "h3",
                  "type": "element",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Test link",
                    },
                  ],
                  "properties": Object {
                    "href": "https://www.example.com",
                  },
                  "tagName": "a",
                  "type": "element",
                },
                Object {
                  "children": Array [
                    Object {
                      "type": "text",
                      "value": "Test paragraph 2.",
                    },
                  ],
                  "properties": Object {},
                  "tagName": "p",
                  "type": "element",
                },
              ],
              "tagName": "section",
              "type": "element",
            },
          ],
          "tagName": "section",
          "type": "element",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Test heading 2",
                },
              ],
              "properties": Object {},
              "tagName": "h2",
              "type": "element",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Test paragraph 3.",
                },
              ],
              "properties": Object {},
              "tagName": "p",
              "type": "element",
            },
          ],
          "tagName": "section",
          "type": "element",
        },
        Object {
          "children": Array [
            Object {
              "type": "text",
              "value": "Test footnotes.",
            },
          ],
          "properties": Object {
            "class": "footnotes",
          },
          "tagName": "div",
          "type": "element",
        },
      ],
      "data": Object {
        "quirksMode": false,
      },
      "type": "root",
    }
  }
>
  <p
    key="h-2"
  >
    Test paragraph.
  </p>
  <section
    key="h-3"
  >
    <Component
      key="h-4"
    >
      <Heading
        level="h2"
      >
        <Styled(h2)>
          <h2
            className="css-1qf3p84"
          >
            Test heading
          </h2>
        </Styled(h2)>
      </Heading>
    </Component>
    <Blockquote
      key="h-5"
    >
      <Styled(blockquote)>
        <blockquote
          className="css-2570gk"
        >
          <p
            key="h-6"
          >
            Test blockquote
          </p>
        </blockquote>
      </Styled(blockquote)>
    </Blockquote>
    <section
      key="h-7"
    >
      <Component
        key="h-8"
      >
        <Heading
          level="h3"
        >
          <Styled(h3)>
            <h3
              className="css-1qf3p84"
            >
              Test subheading
            </h3>
          </Styled(h3)>
        </Heading>
      </Component>
      <Link
        href="https://www.example.com"
        key="h-9"
      >
        <Styled(a)
          href="https://www.example.com"
          onClick={[Function]}
          rel="noopener"
          target="_blank"
        >
          <a
            className="css-nk3r0j"
            href="https://www.example.com"
            onClick={[Function]}
            rel="noopener"
            target="_blank"
          >
            Test link
          </a>
        </Styled(a)>
      </Link>
      <p
        key="h-10"
      >
        Test paragraph 2.
      </p>
    </section>
  </section>
  <section
    key="h-11"
  >
    <Component
      key="h-12"
    >
      <Heading
        level="h2"
      >
        <Styled(h2)>
          <h2
            className="css-1qf3p84"
          >
            Test heading 2
          </h2>
        </Styled(h2)>
      </Heading>
    </Component>
    <p
      key="h-13"
    >
      Test paragraph 3.
    </p>
  </section>
  <div
    className="footnotes"
    key="h-14"
  >
    Test footnotes.
  </div>
</Markdown>
`;
